# cms-v1

./: pyproject.toml
backend/: pyproject.toml
backend/app/: api.py  database.py  main.py  models.py
backend/app/routers/: auth.py
frontend/cms-frontend/: package-lock.json
frontend/cms-frontend/public/: index.html
frontend/cms-frontend/src/: App.css  App.js  api.js
frontend/cms-frontend/src/Components/Auth/: LoginSignup.css  LoginSignup.jsx
